# comfyui_service

./: .gitignore  Dockerfile  README.md  comfyui.py  comfyui_server.py  configs.py  downloads.json  install.py  main.py  parse_downloads.py  pyproject.toml  test.py
comfyui_service/: cli.py  comfyui.py  configs.py  install.py
endpoints/: txt2img.yaml  txt2vid_lcm.yaml
example/: Dockerfile  README.md  downloads.json  example_snapshot.json  main.py  test.py
example/endpoints/: style_mixing.yaml
example/example_endpoints/: img2vid.yaml  txt2img.yaml  txt2vid_lcm.yaml
example/workflows/: style_mixing.json
snapshot/: s3_models.json
